provision/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triluong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triluong
  template:
    metadata:
      labels:
        app: triluong
    spec:
      containers:
        - image: triluong/nc-student
          name: cont
          ports:
            - containerPort: 9090
              name: web
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "75Mi"
              cpu: "75m"
