provision/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: triluong-student
  labels:
    app: student
spec:
  containers:
    - image: triluong/nc-student
      name: cont
      ports:
        - containerPort: 80
          name: web
      resources:
        requests:
          memory: "60Mi"
          cpu: "50m"
        limits:
          memory: "75Mi"
          cpu: "75m"
