provision/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: triluong-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/student/public/health
            backend:
              serviceName: triluong-svc
              servicePort: 9090
